--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "go.lintTool": "golangci-lint",
-    "go.lintFlags": [
-        "--fast"
-    ],
-    "go.lintOnSave": "file",
+    "go.lintFlags": ["--fast"],
+    "go.lintOnSave": "package",
+    "go.useLanguageServer": true,
+    "go.formatTool": "gofmt",
+    "go.testFlags": ["-v"]
 }
