--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "go.lintTool": "golangci-lint",
     "go.lintFlags": ["--fast"],
-    "go.lintOnSave": "package",
     "go.useLanguageServer": true,
     "go.formatTool": "gofmt",
+    "go.lintOnSave": "package",
+    "go.vetOnSave": "package",
     "go.testFlags": ["-v"]
 }
